# flask-web-blog

./: README.md  pyproject.toml
app/: __init__.py
app/blog/: blog_model.py  blog_routes.py
app/user/: user_model.py
