[tool.poetry]
name = "flask-web-blog"
version = "0.1.0"
description = ""
authors = ["Felipe <dasilva.felipex93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
